--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lucas Gauthier | Fullstack Developer</title>
+    <title>Lucas Gauthier | Fullstack Developer - Contact me!</title>
     <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="favicon/apple-touch-icon.png" />
     <link rel="stylesheet" href="css/main.css" />
@@ -12,7 +12,7 @@
     <header></header>
     <main>
       <h1>Work in progress...</h1>
-      <a href="contact.html">Contact me!</a>
+      <a href="index.html">Go back home...</a>
     </main>
     <footer></footer>
   </body>
