--- a/contact.html
+++ b/contact.html
@@ -12,8 +12,9 @@
     <header></header>
     <main>
       <h1>Work in progress...</h1>
-      <a href="index.html">Go back home...</a>
+      <a class="link_home" href="">Go back home...</a>
     </main>
     <footer></footer>
+    <script src="fixLinks.js"></script>
   </body>
 </html>
