--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <header></header>
     <main>
       <h1>Work in progress...</h1>
-      <a href="contact.html">Contact me!</a>
+      <a class="link_contact" href="contact">Contact me!</a>
     </main>
     <footer></footer>
+    <script src="fixLinks.js"></script>
   </body>
 </html>
