--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
     <header></header>
     <main>
       <h1>Work in progress...</h1>
-      <a class="link_home" href="">Go back home...</a>
+      <a class="link_home" href=".">Go back home...</a>
     </main>
     <footer></footer>
     <script src="fixLinks.js"></script>
