--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lucas Gauthier | Fullstack Developer - Contact me!</title>
-    <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon" />
-    <link rel="apple-touch-icon" href="favicon/apple-touch-icon.png" />
+    <link rel="shortcut icon" href="logo/favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="logo/apple-touch-icon.png" />
+    <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
