--- a/index.html
+++ b/index.html
@@ -4,16 +4,27 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lucas Gauthier | Fullstack Developer</title>
-    <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon" />
-    <link rel="apple-touch-icon" href="favicon/apple-touch-icon.png" />
+    <link rel="shortcut icon" href="logo/favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="logo/apple-touch-icon.png" />
+    <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
-    <header></header>
-    <main>
-      <h1>Work in progress...</h1>
-      <a class="link_contact" href="contact">Contact me!</a>
-    </main>
+    <header>
+      <a class="link_home" href="."
+        ><img src="logo/logo-512x512.png" alt="Lucas Gauthier logo"
+      /></a>
+      <nav>
+        <a class="link_about" href="about" data-text="About me">About me</a>
+        <a class="link_projects" href="projects" data-text="Projects"
+          >Projects</a
+        >
+        <a class="link_contact" href="contact" data-text="Get in touch"
+          >Get in touch</a
+        >
+      </nav>
+    </header>
+    <main></main>
     <footer></footer>
     <script src="fixLinks.js"></script>
   </body>
