--- a/about.html
+++ b/about.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lucas Gauthier | Fullstack Developer</title>
+    <title>Lucas Gauthier | Fullstack Developer - About me</title>
     <link rel="shortcut icon" href="img/logo/favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="img/logo/apple-touch-icon.png" />
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/about.css" />
   </head>
   <body>
     <header>
@@ -27,13 +27,7 @@
     </header>
 
     <main>
-      <h1 id="hi">Hi!</h1>
-      <h1>I'm <span id="name" class="3d">Lucas</span>,</h1>
-      <h1>a <span class="3d">Fullstack Developer</span></h1>
-      <h2>
-        who likes to play with
-        <img id="javascript" src="img/javascript.png" alt="JavaScript logo" />
-      </h2>
+      <p>Work in progress...</p>
     </main>
 
     <footer>
