--- a/contact.html
+++ b/contact.html
@@ -3,19 +3,37 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lucas Gauthier | Fullstack Developer - Contact me!</title>
-    <link rel="shortcut icon" href="logo/favicon.ico" type="image/x-icon" />
-    <link rel="apple-touch-icon" href="logo/apple-touch-icon.png" />
+    <title>Lucas Gauthier | Fullstack Developer - Get in touch</title>
+    <link rel="shortcut icon" href="img/logo/favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="img/logo/apple-touch-icon.png" />
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/contact.css" />
   </head>
   <body>
-    <header></header>
+    <header>
+      <a id="header-logo" class="link_home" href="."
+        ><img src="img/logo/logo-512x512.png" alt="Lucas Gauthier logo"
+      /></a>
+      <nav>
+        <a class="link_about" href="about" data-text="About me">About me</a>
+        <a class="link_projects" href="projects" data-text="Projects"
+          >Projects</a
+        >
+        <a class="link_contact" href="contact" data-text="Get in touch"
+          >Get in touch</a
+        >
+      </nav>
+    </header>
+
     <main>
-      <h1>Work in progress...</h1>
-      <a class="link_home" href=".">Go back home...</a>
+      <p>Work in progress...</p>
     </main>
-    <footer></footer>
-    <script src="fixLinks.js"></script>
+
+    <footer>
+      <p>Made with <span class="emoji">&#10084;</span> by Lucas Gauthier</p>
+    </footer>
+
+    <script src="js/fixLinks.js"></script>
   </body>
 </html>
